force-app/main/default/objects/Activity/fields/Booking_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_CP__c</fullName>
    <label>Booking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>