force-app/main/default/objects/Activity/fields/Client_Activity__c.field-meta.xml
<CustomField>
    <fullName>Client_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Activity</label>
    <referenceTo>Client_Activity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>