force-app/main/default/objects/Activity/fields/DMS_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Project_Id__c</fullName>
    <label>DMS Project Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>