force-app/main/default/objects/Activity/fields/DMS_ProjectTask_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_ProjectTask_Id__c</fullName>
    <label>DMS ProjectTask Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>