force-app/main/default/objects/Activity/fields/External_Sync_Response__c.field-meta.xml
<CustomField>
    <fullName>External_Sync_Response__c</fullName>
    <label>External Sync Response</label>
    <type>TextArea</type>
</CustomField>