force-app/main/default/objects/Activity/fields/External_What_Id__c.field-meta.xml
<CustomField>
    <fullName>External_What_Id__c</fullName>
    <label>External What Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>