force-app/main/default/objects/Activity/fields/External_Who_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Who_Id__c</fullName>
    <label>External Who Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>