force-app/main/default/objects/Activity/fields/inspire1__Actual_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Actual_Effort__c</fullName>
    <description>Actual number of hours used to complete the task. Roll up from Time Entry records.</description>
    <inlineHelpText>Actual number of hours used to complete the task based on time entries.</inlineHelpText>
    <label>Actual Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>