force-app/main/default/objects/Activity/fields/inspire1__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>inspire1__AssignedTo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Captures user or contact ID the task has been assigned to confirm uniqueness.</description>
    <label>AssignedTo ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>