force-app/main/default/objects/Activity/fields/inspire1__Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Budgeted_Cost__c</fullName>
    <description>References Budgeted Cost from related Project Task.</description>
    <formula>IF( 
   $Setup.inspire1__InspirePlannerConfig__c.inspire1__Use_Effort_to_Calculate_Cost__c = TRUE,
   inspire1__Planned_Effort__c *  inspire1__Hourly_Rate__c ,
   inspire1__Inspire_Task__r.inspire1__Budgeted_Cost__c
)</formula>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>