force-app/main/default/objects/Activity/fields/inspire1__Custom_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Custom_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>