force-app/main/default/objects/Activity/fields/inspire1__Inspire_Task__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Inspire_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Inspire project task.</description>
    <label>Inspire Task</label>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipLabel>Salesforce Tasks</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>