force-app/main/default/objects/Activity/fields/inspire1__Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Parent_Task__c</fullName>
    <description>Reference to parent task name related to Inspire Task.</description>
    <formula>inspire1__Inspire_Task__r.inspire1__Parent_Task__r.Name</formula>
    <label>Parent Task</label>
    <type>Text</type>
</CustomField>