force-app/main/default/objects/Activity/fields/inspire1__Percent_Allocation__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Percent_Allocation__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Defines the percent the resources has been allocated to the project task.</description>
    <inlineHelpText>Defines the percent the resources has been allocated to the project task.</inlineHelpText>
    <label>% Allocation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>