force-app/main/default/objects/Activity/fields/inspire1__Planned_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Planned_Effort__c</fullName>
    <description>Captures the estimated number of hours to complete the task.</description>
    <formula>inspire1__Percent_Allocation__c * inspire1__Inspire_Task__r.inspire1__Planned_Effort__c</formula>
    <inlineHelpText>Estimated number of hours to complete the task.</inlineHelpText>
    <label>Planned Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>