force-app/main/default/objects/Activity/fields/inspire1__Project_Deleted__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Project_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Deleted</label>
    <type>Checkbox</type>
</CustomField>