force-app/main/default/objects/Activity/fields/inspire1__Ready_to_Start__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Ready_to_Start__c</fullName>
    <description>Identifies if all Predecessors have been met and task is ready to be started.  Referenced from related Project Task.</description>
    <formula>inspire1__Inspire_Task__r.inspire1__ReadyToStart__c</formula>
    <inlineHelpText>Identifies if all Predecessors have been met and task is ready to be started.</inlineHelpText>
    <label>Ready to Start</label>
    <type>Checkbox</type>
</CustomField>