force-app/main/default/objects/Activity/fields/inspire1__Resource_Name2__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Resource_Name2__c</fullName>
    <description>Name of resource the project task has been assigned to.</description>
    <label>Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>