force-app/main/default/objects/Activity/fields/inspire1__Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Resource_Type__c</fullName>
    <description>Defines if assigned resource is a User or Contact.</description>
    <formula>IF(
  NOT(ISBLANK(WhoId)),&quot;Contact&quot;,
  IF(ISBLANK(Owner:User.Email), &quot;Queue&quot;,
  &quot;User&quot;)
)</formula>
    <label>Resource Type</label>
    <type>Text</type>
</CustomField>