force-app/main/default/objects/Activity/fields/inspire1__Schedule_As__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Schedule_As__c</fullName>
    <description>Defines type of booking.  Value will determine how time is displayed in Resource Allocation page.</description>
    <label>Schedule As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Future Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>