force-app/main/default/objects/Activity/fields/inspire1__sysContactTaskEmail__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysContactTaskEmail__c</fullName>
    <description>Reference to Inspire Planner custom setting which defines if email notification should be sent to Contact for new task assignment.</description>
    <formula>$Setup.inspire1__InspirePlannerConfig__c.inspire1__Enable_Contact_Task_Assignment_Email__c</formula>
    <inlineHelpText>Reference to Inspire Planner custom setting which defines if email notification should be sent to Contact for new task assignment.</inlineHelpText>
    <label>_sysContactTaskEmail</label>
    <type>Checkbox</type>
</CustomField>