force-app/main/default/objects/Activity/fields/inspire1__sysFutureProjectEffort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysFutureProjectEffort__c</fullName>
    <label>Task Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>