force-app/main/default/objects/Activity/fields/inspire1__sysTemplateTask__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysTemplateTask__c</fullName>
    <description>Determines if Task is related to Project Template. This is used as filter criteria for Resource Allocation calculation.</description>
    <formula>IF( 
AND( 
NOT(ISNULL( inspire1__Inspire_Task__c )), 
inspire1__Inspire_Task__r.inspire1__Project__r.inspire1__Template__c = TRUE 
), 
TRUE, 
FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_sysTemplateTask</label>
    <type>Checkbox</type>
</CustomField>