force-app/main/default/objects/Activity/listViews/inspire1__My_Open_Project_Tasks.listView-meta.xml
<ListView>
    <fullName>inspire1__My_Open_Project_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.DUE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Open Project Tasks</label>
</ListView>