force-app/main/default/objects/Activity/listViews/inspire1__My_Project_Tasks_Due_THIS_WEEK.listView-meta.xml
<ListView>
    <fullName>inspire1__My_Project_Tasks_Due_THIS_WEEK</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>inspire1__Planned_Effort__c</columns>
    <columns>inspire1__Actual_Effort__c</columns>
    <columns>inspire1__Percent_Allocation__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>My Project Tasks - DUE THIS WEEK</label>
</ListView>