force-app/main/default/objects/Activity/listViews/inspire1__My_Project_Tasks_OPEN.listView-meta.xml
<ListView>
    <fullName>inspire1__My_Project_Tasks_OPEN</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.STATUS</columns>
    <columns>inspire1__Custom_Start_Date__c</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>inspire1__Planned_Effort__c</columns>
    <columns>inspire1__Actual_Effort__c</columns>
    <columns>inspire1__Percent_Allocation__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Project Tasks - OPEN</label>
</ListView>